patchage (1.0.5) unstable;

  * Fix ALSA sequencer port subscriptions
  * Fix crash on client disconnection
  * Show latency in toolbar with 2 decimal places
  * Switch to C++14

 -- David Robillard <d@drobilla.net>  Tue, 11 May 2021 17:27:16 +0000

patchage (1.0.4) stable;

  * Add NSMicrophoneUsageDescription for MacOS 10.15 Catalina
  * Add command line option to print version
  * Fix making and breaking connections with Jack DBus
  * Fix sample rate with Jack DBus
  * Fix unstable module positions
  * Improve man page
  * Remove Jack session support
  * Remove flaky DSP load meter

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:59:02 +0000

patchage (1.0.2) stable;

  * Add support for exporting canvas as PDF
  * Bring back Jack buffer size selector
  * Configure based on compiler target OS for cross-compilation
  * Don't install 512x512 icons
  * Fix compilation with Jack DBus
  * Order ports deterministically
  * Restore messages pane visibility and height
  * Save window size and position when closed via window manager
  * Style messages pane to match canvas
  * Support Jack CV and OSC via metadata
  * Upgrade to waf 2.0.19

 -- David Robillard <d@drobilla.net>  Thu, 09 Apr 2020 12:29:59 +0000

patchage (1.0.0) stable;

  * Allow removing connections by selecting their handle and pressing delete
  * Fix font configuration on OSX
  * Integrate with Mac menu bar on OSX
  * Make port colours configurable
  * Remove LASH support and simplify UI
  * Remove Raul dependency
  * Support for DOT export for rendering with GraphViz
  * Support port pretty names via new Jack metadata API
  * Switch from FlowCanvas to Ganv (much improved looks and performance)
  * Use Mac style key bindings on OSX
  * Use XDG_CONFIG_HOME instead of ~/.patchagerc

 -- David Robillard <d@drobilla.net>  Mon, 28 Apr 2014 03:46:10 +0000

patchage (0.5.0) stable;

  * Add -J (--no-jack) command line option
  * Add missing COPYING file to distribution
  * Add more/larger icons